Fixed product box margin spacing

--- a/index.css
+++ b/index.css
@@ -34,7 +34,6 @@ h2 {
   background-color: rgba(67, 125, 133, 0.507);
   border-radius: 20px;
   margin-left: 10px;
-  margin-right: 1250px;
 }
 
 .product-name {
